# homebot

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: InstallCard.vue  Layout.vue  index.ts  style.css
docs/channels/: feishu.md  index.md  telegram.md  voice.md
docs/guide/: quick-start.md  voice-interaction.md
docs/skills/: alarm.md  index.md  mijia.md  qqmusic.md  weather.md  xiaohongshu.md
docs/tools/: browser.md  filesystem.md  index.md  shell.md  web-fetch.md  web-search.md
docs/voice/: audio-devices.md  speaker-verification.md  wake-word.md
homebot/: __init__.py  __main__.py
homebot/agent/: __init__.py  context.py  hook.py  loop.py  runner.py  skills.py
homebot/agent/tools/: __init__.py  base.py  browser.py  filesystem.py  message.py  registry.py  schema.py  search.py  shell.py  web.py  web_search.py
homebot/bus/: __init__.py  events.py  queue.py
homebot/channels/: __init__.py  base.py  feishu.py  manager.py  registry.py  telegram.py  voice.py
homebot/cli/: __init__.py  config.py  gateway.py  init.py
homebot/command/: __init__.py  builtin.py  router.py
homebot/config/: __init__.py  loader.py  paths.py  schema.py
homebot/cron/: __init__.py  browser_refresh.py  service.py  types.py
homebot/providers/: __init__.py  base.py  openai_compat_provider.py  registry.py
homebot/session/: __init__.py  manager.py
homebot/skills/: README.md
homebot/skills/alarm/: SKILL.md
homebot/skills/mijia/: driver.py
homebot/skills/qqmusic/: SKILL.md  discover.md
homebot/skills/weather/: SKILL.md
homebot/utils/: __init__.py  helpers.py  progress_events.py  prompt_templates.py  restart.py  runtime.py  tool_hints.py
homebot/voice/: __init__.py  kws.py  speaker_verification.py  state.py  stt.py  tts_streaming.py
tests/: test_browser.py  test_config_cli.py  test_cron_browser_refresh.py  test_feishu.py  test_kws_bench.py  test_mijia_driver.py  test_openai_compat_provider.py  test_runner_response_format.py  test_session_manager.py  test_speaker_verification.py  test_voice.py  test_web_search.py  test_xiaohongshu_skill.py
(+13 files in other folders)
